# llm-subtrans

./: .aidigestignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  development-ideas.md  install.sh  pyproject.toml  readme.md
.github/workflows/: ci.yml
PySubtrans/: Instructions.py  Options.py  ProviderSettingsView.py  README.md  SettingsType.py  Substitutions.py  SubtitleBatch.py  SubtitleBatcher.py  SubtitleBuilder.py  SubtitleData.py  SubtitleEditor.py  SubtitleError.py  SubtitleFileHandler.py  SubtitleFormatRegistry.py  SubtitleLine.py  SubtitleProcessor.py  SubtitleProject.py  SubtitleScene.py  SubtitleSerialisation.py  SubtitleTranslator.py  SubtitleValidator.py  Subtitles.py  Translation.py  TranslationClient.py  TranslationEvents.py  TranslationParser.py  TranslationPrompt.py  TranslationProvider.py  TranslationRequest.py  VersionCheck.py  __init__.py
PySubtrans/Formats/: SSAFileHandler.py  SrtFileHandler.py  VttFileHandler.py  __init__.py
PySubtrans/Helpers/: Color.py  ContextHelpers.py  InstructionsHelpers.py  Localization.py  Parse.py  Resources.py  SubtitleHelpers.py  TestCases.py  Tests.py  Text.py  Time.py  Version.py  __init__.py
PySubtrans/MKV/: Config.py  Diagnostics.py  MKVExtractor.py  SubtitleFilter.py  VideoFile.py  __init__.py
PySubtrans/Providers/: Provider_Azure.py  Provider_Bedrock.py  Provider_Claude.py  Provider_Custom.py  Provider_DeepSeek.py  Provider_Gemini.py  Provider_Mistral.py  Provider_OpenAI.py  Provider_OpenRouter.py  __init__.py
PySubtrans/Providers/Clients/: AnthropicClient.py  AzureOpenAIClient.py  BedrockClient.py  ChatGPTClient.py  CustomClient.py  DeepSeekClient.py  GeminiClient.py  MistralClient.py  OpenAIClient.py  OpenAIReasoningClient.py  OpenRouterClient.py  __init__.py
docs/: architecture.md
exsubs_pkg/: README.md  pyproject.toml
exsubs_pkg/src/exsubs/: __init__.py  cli.py  env.py  mkv.py
exsubs_pkg/src/exsubs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hooks/: hook-PySubtrans.py
instructions/: __init__.py  instructions (proofread).txt  instructions.txt  instructions_el.txt  instructions_fi.txt
scripts/: azure_subtrans.py  batch_translate.py  bedrock_subtrans.py  check_imports.py  claude_subtrans.py  deepseek_subtrans.py  exsubs.py  extract_strings.py  gemini_subtrans.py  generate-cmd.sh  gpt_subtrans.py  llm_subtrans.py  makedistro-mac.sh  makedistro.sh  mistral_subtrans.py  publish_package.py  run_tests.py  subtrans_common.py  sync_version.py  transubs.py  update_translations.py  verify_package.py
testfiles/: Schitts.Creek.S06E01.Smoke.Signals.1080p.AMZN.WEB-DL.DD.2.0.H.264-CtrlHD.fi.srt
tests/: __init__.py  unit_tests.py
tests/PySubtransTests/: test_ChineseDinner.py  test_LargeContext.py  test_OpenAIReasoningClient.py  test_Options.py  test_Parse.py  test_PySubtrans.py  test_SsaFileHandler.py  test_Streaming.py  test_Substitutions.py  test_SubtitleBuilder.py  test_SubtitleEditor.py  test_SubtitleFormatRegistry.py  test_SubtitleProject.py  test_SubtitleProjectFormats.py  test_SubtitleValidator.py  test_Subtitles.py  test_Time.py  test_Translator.py  test_VttFileHandler.py  test_localization.py  test_text.py
tests/TestData/: __init__.py  chinese_dinner.py
tests/functional/: __init__.py  batcher_test.py  preprocessor_test.py
