[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-subtrans"
version = "1.5.4"
description = "CLI subtitle translation tool using large language models (Linux/macOS)"
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "python-dotenv",
    "srt",
    "pysubs2",
    "regex",
    "babel",
    "appdirs",
    "blinker",
    "requests",
    "setuptools",
    "httpx",
    "httpx[socks]"
]

[project.optional-dependencies]
openai = ["openai"]
azure = ["openai"]
gemini = ["google-genai", "google-api-core"]
claude = ["anthropic"]
mistral = ["mistralai"]
bedrock = ["boto3"]

[project.scripts]
llm-subtrans = "scripts.llm_subtrans:main"
gpt-subtrans = "scripts.gpt_subtrans:main"
gemini-subtrans = "scripts.gemini_subtrans:main"
claude-subtrans = "scripts.claude_subtrans:main"
deepseek-subtrans = "scripts.deepseek_subtrans:main"
mistral-subtrans = "scripts.mistral_subtrans:main"
bedrock-subtrans = "scripts.bedrock_subtrans:main"
azure-subtrans = "scripts.azure_subtrans:main"
batch-translate = "scripts.batch_translate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["PySubtrans*", "scripts*"]
namespaces = true
