[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-subtrans"
version = "1.6.0"
description = "CLI subtitle translation tool with MKV extraction using large language models (Linux/macOS)"
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "python-dotenv",
    "srt",
    "pysubs2",
    "regex",
    "babel",
    "appdirs",
    "blinker",
    "requests",
    "setuptools",
    "httpx",
    "httpx[socks]",
    "subtitle_filter",
    "chardet",
    "filelock",
    "rich"
]

[project.optional-dependencies]
openai = ["openai"]
azure = ["openai"]
gemini = ["google-genai", "google-api-core"]
claude = ["anthropic"]
mistral = ["mistralai"]
bedrock = ["boto3"]
mkv = ["subtitle_filter", "chardet", "filelock", "rich"]

[project.scripts]
llm-subtrans = "scripts.llm_subtrans:main"
gpt-subtrans = "scripts.gpt_subtrans:main"
gemini-subtrans = "scripts.gemini_subtrans:main"
claude-subtrans = "scripts.claude_subtrans:main"
deepseek-subtrans = "scripts.deepseek_subtrans:main"
mistral-subtrans = "scripts.mistral_subtrans:main"
bedrock-subtrans = "scripts.bedrock_subtrans:main"
azure-subtrans = "scripts.azure_subtrans:main"
batch-translate = "scripts.batch_translate:main"
exsubs = "scripts.exsubs:main"
transubs = "scripts.transubs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["PySubtrans*", "scripts*", "instructions*"]
namespaces = true

[tool.setuptools.package-data]
instructions = ["*.txt"]
