[build-system]
requires = ["hatchling>=1.27.0", "uv-dynamic-versioning>=0.8.0"]
build-backend = "hatchling.build"

[project]
name = "llm-subtrans"
dynamic = ["version"]
description = "CLI subtitle translation tool with MKV extraction using large language models (Linux/macOS)"
readme = "readme.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "python-dotenv",
    "srt",
    "pysubs2",
    "regex",
    "babel",
    "appdirs",
    "blinker",
    "requests",
    "setuptools",
    "httpx",
    "httpx[socks]",
    "subtitle_filter",
    "chardet",
    "filelock",
    "rich",
    "ffmpeg-progress-yield",
    "tqdm"
]

[project.optional-dependencies]
openai = ["openai"]
azure = ["openai"]
gemini = ["google-genai", "google-api-core"]
claude = ["anthropic"]
mistral = ["mistralai"]
bedrock = ["boto3"]
mkv = ["subtitle_filter", "chardet", "filelock", "rich"]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "pytest>=8.3.4",
    "ruff>=0.12.0",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
llm-subtrans = "scripts.llm_subtrans:main"
gpt-subtrans = "scripts.gpt_subtrans:main"
gemini-subtrans = "scripts.gemini_subtrans:main"
claude-subtrans = "scripts.claude_subtrans:main"
deepseek-subtrans = "scripts.deepseek_subtrans:main"
mistral-subtrans = "scripts.mistral_subtrans:main"
bedrock-subtrans = "scripts.bedrock_subtrans:main"
azure-subtrans = "scripts.azure_subtrans:main"
batch-translate = "scripts.batch_translate:main"
exsubs = "scripts.exsubs:main"
transubs = "scripts.transubs:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["PySubtrans", "scripts", "instructions"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["PySubtrans", "scripts", "tests"]

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ALL"]

[tool.basedpyright]
pythonVersion = "3.12"
include = ["src", "tests"]
typeCheckingMode = "off"
reportAny = false
reportImplicitStringConcatenation = false
reportMissingTypeStubs = false
